--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "just-debounce-it": "3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "6.1.0",
     "react-hook-form": "7.49.3",
     "react-router-dom": "6.21.1"
   },
